# fabryka-czekolady

./: CMakeLists.txt  README.md
docs/: Krzysztof_Pietrzak_156721_opis_FABRYKA_CZEKOLADY.md  Krzysztof_Pietrzak_156721_opis_Fabryka_czekolady.md
include/: common.h
src/: dostawca.cpp  dyrektor.cpp  magazyn.cpp  stanowisko.cpp
tests/: run_tests.sh
